--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1055,7 +1055,7 @@ for machine in $build $host $target; do
 		else
 			tmake_file=i386/t-sco5
 		fi
-		extra_parts="crtbegin.o crtend.o crtbeginS.o crtendS.o"
+		extra_parts="crti.o crtbegin.o crtend.o crtbeginS.o crtendS.o"
 		;;
 	i[[34567]]86-*-sco3.2v4*) 	# 80386 running SCO 3.2v4 system
 		xm_file="${xm_file} i386/xm-sco.h"
