Backport Filesystem TS from mainline 	* acinclude.m4 (GLIBCXX_ENABLE_FILESYSTEM_TS, 	GLIBCXX_CHECK_FILESYSTEM_DEPS): Define. 	* configure.ac: Use them. 	* configure: Regenerate. 	* config.h.in: Regenerate. 	* include/Makefile.am: Add filesystem headers. Fix order of headers. 	* include/Makefile.in: Regenerate. 	* include/bits/locale_conv.h (__do_str_codecvt, __str_codecvt_in, 	__str_codecvt_out, wstring_convert): Refactor to move all conversion 	logic to non-member functions. 	* include/bits/quoted_string.h (_Quoted_string, operator<<, 	operator>>): Move from <iomanip> to new header. 	* include/experimental/filesystem: New. 	* include/experimental/fs_dir.h: New. 	* include/experimental/fs_fwd.h: New. 	* include/experimental/fs_ops.h: New. 	* include/experimental/fs_path.h: New. 	* include/std/iomanip (_Quoted_string, operator<<, operator>>): Move 	to <bits/quoted_string.h>. 	* libstdcxx/v6/printers.py (StdExpPathPrinter): Define. 	* scripts/testsuite_flags.in: Add filesystem dir to ldflags. 	* src/Makefile.am: Add filesystem sub-dir. 	* src/Makefile.in: Regenerate. 	* src/filesystem/Makefile.am: New. 	* src/filesystem/Makefile.in: New. 	* src/filesystem/dir.cc: New. 	* src/filesystem/ops.cc: New. 	* src/filesystem/path.cc: New. 	* testsuite/experimental/filesystem/operations/absolute.cc: New. 	* testsuite/experimental/filesystem/operations/copy.cc: New. 	* testsuite/experimental/filesystem/operations/current_path.cc: New. 	* testsuite/experimental/filesystem/operations/exists.cc: New. 	* testsuite/experimental/filesystem/operations/file_size.cc: New. 	* testsuite/experimental/filesystem/operations/status.cc: New. 	* testsuite/experimental/filesystem/operations/temp_directory_path.cc: 	New. 	* testsuite/experimental/filesystem/path/append/path.cc: New. 	* testsuite/experimental/filesystem/path/assign/assign.cc: New. 	* testsuite/experimental/filesystem/path/assign/copy.cc: New. 	* testsuite/experimental/filesystem/path/compare/compare.cc: New. 	* testsuite/experiment

--- a/libstdc++-v3/include/Makefile.in
+++ b/libstdc++-v3/include/Makefile.in
@@ -418,6 +418,7 @@ bits_headers = \
 	${bits_srcdir}/postypes.h \
 	${bits_srcdir}/predefined_ops.h \
 	${bits_srcdir}/ptr_traits.h \
+	${bits_srcdir}/quoted_string.h \
 	${bits_srcdir}/random.h \
 	${bits_srcdir}/random.tcc \
 	${bits_srcdir}/range_access.h \
@@ -939,10 +940,19 @@ experimental_headers = \
 	${experimental_srcdir}/optional \
 	${experimental_srcdir}/ratio \
 	${experimental_srcdir}/string_view \
-	${experimental_srcdir}/system_error \
 	${experimental_srcdir}/string_view.tcc \
+	${experimental_srcdir}/system_error \
 	${experimental_srcdir}/tuple \
-	${experimental_srcdir}/type_traits
+	${experimental_srcdir}/type_traits \
+	${experimental_filesystem_headers}
+
+@ENABLE_FILESYSTEM_TS_FALSE@experimental_filesystem_headers = 
+@ENABLE_FILESYSTEM_TS_TRUE@experimental_filesystem_headers = \
+@ENABLE_FILESYSTEM_TS_TRUE@	${experimental_srcdir}/filesystem \
+@ENABLE_FILESYSTEM_TS_TRUE@	${experimental_srcdir}/fs_dir.h \
+@ENABLE_FILESYSTEM_TS_TRUE@	${experimental_srcdir}/fs_fwd.h \
+@ENABLE_FILESYSTEM_TS_TRUE@	${experimental_srcdir}/fs_ops.h \
+@ENABLE_FILESYSTEM_TS_TRUE@	${experimental_srcdir}/fs_path.h
 
 
 # This is the common subset of C++ files that all three "C" header models use.
